--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.0.3",
     "fireworks-js": "^2.10.2",
     "gsap": "^3.11.5",
+    "openai": "^4.20.0",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
